# Structured_Network_Autonomy

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: build-component.md  build-status.md  code-review.md  compliance-audit.md  security-review.md
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  App.test.jsx  styles.css
dashboards/: README.md  sna-devices.json  sna-overview.json
inventory/: eveng-lab.yaml  example.yaml
policies/: default.yaml
src/sna/: __init__.py  cli.py  config.py  log_config.py
tests/: conftest.py  test_app_lifecycle.py  test_cli.py  test_config.py  test_integration.py
tests/api/: conftest.py  test_agents.py  test_audit.py  test_auth.py  test_batch_route.py  test_dashboard.py  test_eas.py  test_escalation.py  test_evaluate.py  test_health.py  test_inventory.py  test_policy.py  test_policy_versioning.py  test_reports.py  test_security_hardening.py
tests/dashboards/: test_dashboard_json.py
tests/db/: test_models.py
tests/devices/: test_batch.py  test_command_builder.py  test_driver.py  test_enrichment.py  test_executor.py  test_inventory.py  test_registry.py  test_rollback.py  test_sanitizer.py
tests/integrations/: test_discord.py  test_mcp.py  test_netbox.py  test_notifier.py  test_pagerduty.py  test_slack.py  test_teams.py  test_vault.py
tests/mcp_server/: test_integration.py  test_server.py
tests/observability/: test_correlation.py  test_tracing.py
(+109 files in other folders)
